🚨 SECURITY FIX: Remove exposed API key from repository
- Remove all compiled JavaScript files containing exposed API key
- Update .gitignore to prevent future exposure of build outputs
- Add comprehensive patterns to exclude sensitive files
- Remove hosting/public/gambia-itc/ directory with exposed key
- Remove app/web/dist/ directory with exposed key

CRITICAL: API key AIzaSyD_oUwfnUATP48ah2K48AWSaNEYJLgoaW4 was exposed
Action required: Regenerate API key in Google Cloud Console

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,20 @@ node_modules/
 # dataconnect generated files
 .dataconnect
 tourism-development-*.json
+
+# Build outputs that may contain API keys
+**/dist/
+**/build/
+**/public/gambia-itc/
+**/hosting/public/
+
+# Environment files
+.env
+.env.local
+.env.production
+.env.development
+
+# API Keys and secrets
+**/api-keys.json
+**/secrets.json
+**/*-key.json
